# CL_bot

./: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.jsondunstrc  requirements.txt
assets/: tongue_out.tgs
bot/: __main__.py
bot/commands/: Collection.py  Contributions.py  Donations.py  Edit.py  Fusion.py  Hello.py  Help.py  InfoPosts.py  Misc.py  Order.py  Posts.py  Publicity.py  SavePosts.py  SearchPosts.py  Subtitles.py  Translations.py  Watch.py
bot/core/: cine.db
bot/db/: create_cine_db.py  create_db.py
bot/entry/: entry.py
bot/queries/: cb_queries.py  inline_queries.py  queries.py
bot/utils/: create_paths.py  db_reqs.py  functions.py  movie_search.py  process_srt_files.py  search_subts.py  translate.py  translations.py  users_translate.py
